RobotDemo/JAKA/jakaAPI_2.1.2/windows/c&c++/example/SDK_C/inc/jakaAPI.h

	/**
	* @brief 机器人关节运动
	* @param joint_pos 机器人关节运动目标位置
	* @move_mode 指定运动模式：增量运动(相对运动)或绝对运动
	* @param is_block 设置接口是否为阻塞接口，TRUE为阻塞接口 FALSE为非阻塞接口
	* @param speed 机器人关节运动速度，单位：rad/s
	* @param acc 机器人关节运动角加速度,单位：rad/s^2
	* @param tol 机器人关节运动终点误差,单位：mm
	* @param option_cond 机器人关节可选参数，如果不需要，该值可不赋值,填入空指针就可
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t joint_move_extend(const JKHD *handle, const JointValue *joint_pos, MoveMode move_mode, BOOL is_block, double speed, double acc, double tol, const OptionalCond *option_cond);
	/**
	* @brief 机器人末端直线运动
	* @param end_pos 机器人末端运动目标位置
	* @move_mode 指定运动模式：增量运动(相对运动)或绝对运动
	* @param is_block 设置接口是否为阻塞接口，TRUE 为阻塞接口 FALSE 为非阻塞接口
	* @param speed 机器人直线运动速度，单位：mm/s
	* @param acc 机器人直线运动加速度,单位mm/s^2
	* @param tol 机器人直线运动终点误差, 单位mm
	* @param option_cond 机器人关节可选参数，如果不需要，该值可不赋值,填入空指针就可
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t linear_move_extend(const JKHD *handle, const CartesianPose *end_pos, MoveMode move_mode, BOOL is_block, double speed, double accel, double tol, const OptionalCond *option_cond);
	/**
	* @brief 机器人末端圆弧运动
	* @param end_pos 机器人末端运动目标位置
	* @param mid_pos 机器人末端运中间点
	* @move_mode 指定运动模式：增量运动(相对运动)或绝对运动
	* @param is_block 设置接口是否为阻塞接口，TRUE 为阻塞接口 FALSE 为非阻塞接口
	* @param speed 机器人圆弧速度，单位：rad/s
	* @param acc 机器人圆弧运动加速度，单位：rad/s^2
	* @param tol 机器人关节运动终点误差, 单位mm
	* @param option_cond 机器人关节可选参数，如果不需要，该值可不赋值,填入空指针就可
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t circular_move(const JKHD *handle, const CartesianPose *end_pos, const CartesianPose *mid_pos, MoveMode move_mode, BOOL is_block, double speed, double accel, double tol, const OptionalCond *option_cond);
	/**
	* @brief  错误状态清除
	* @param handle  机器人控制句柄
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t clear_error(const JKHD *handle);
	/**
	* @brief 计算指定位姿在当前工具、当前安装角度以及当前用户坐标系设置下的逆解
	* @param handle  机器人控制句柄
	* @param ref_pos 逆解计算用的参考关节空间位置
	* @param cartesian_pose 笛卡尔空间位姿值
	* @param joint_pos 计算成功时关节空间位置计算结果
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t kine_inverse(const JKHD *handle, const JointValue *ref_pos, const CartesianPose *cartesian_pose, JointValue *joint_pos);
	/**
	* @brief 计算指定关节位置在当前工具、当前安装角度以及当前用户坐标系设置下的位姿值
	* @param handle  机器人控制句柄
	* @param joint_pos 关节空间位置
	* @param cartesian_pose 笛卡尔空间位姿计算结果
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t kine_forward(const JKHD *handle, const JointValue *joint_pos, CartesianPose *cartesian_pose);
	/**
	* @brief 欧拉角到旋转矩阵的转换
	* @param handle  机器人控制句柄
	* @param rpy 待转换的欧拉角数据
	* @param rot_matrix 转换后的旋转矩阵
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t rpy_to_rot_matrix(const JKHD *handle, const Rpy *rpy, RotMatrix *rot_matrix);
	/**
	* @brief 旋转矩阵到欧拉角的转换
	* @param handle  机器人控制句柄
	* @param rot_matrix 待转换的旋转矩阵数据
	* @param rpy 转换后的RPY欧拉角结果
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t rot_matrix_to_rpy(const JKHD *handle, const RotMatrix *rot_matrix, Rpy *rpy);
	/**
	* @brief 四元数到旋转矩阵的转换
	* @param handle  机器人控制句柄
	* @param quaternion 待转换的四元数数据
	* @param rot_matrix 转换后的旋转矩阵结果
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t quaternion_to_rot_matrix(const JKHD *handle, const Quaternion *quaternion, RotMatrix *rot_matrix);
	/**
	* @brief 旋转矩阵到四元数的转换
	* @param handle  机器人控制句柄
	* @param rot_matrix 待转换的旋转矩阵
	* @param quaternion 转换后的四元数结果
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t rot_matrix_to_quaternion(const JKHD *handle, const RotMatrix *rot_matrix, Quaternion *quaternion);
	/**
	* @brief 注册机器人出现错误时的回调函数
	* @param handle  机器人控制句柄
	* @param func 指向用户定义的函数的函数指针
	* @param error_code 机器人的错误码
	*/
	DLLEXPORT_API errno_t set_error_handler(const JKHD *handle, CallBackFuncType func);
	/**
	* @brief 机器人负载设置
	* @param handle  机器人控制句柄
	* @param payload 负载质心、质量数据
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_payload(const JKHD *handle, const PayLoad *payload);
	/**
	* @brief 获取机器人负载数据
	* @param handle  机器人控制句柄
	* @param payload 负载查询结果
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_payload(const JKHD *handle, PayLoad *payload);
	/**
	* @brief 获取SDK版本号
	* @param handle  机器人控制句柄
	* @param version SDK版本号
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_sdk_version(const JKHD *handle, char *version);
	/**
	* @brief 获取机器人状态数据
	* @param handle  机器人控制句柄
	* @param status 机器人状态
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_robot_status(const JKHD *handle, RobotStatus *status);
	/**
	* @brief 终止当前机械臂运动
	* @param handle  机器人控制句柄
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t motion_abort(const JKHD *handle);
	/**
	* @brief 设置错误码文件路径，需要使用get_last_error接口时需要设置错误码文件路径，如果不使用get_last_error接口，则不需要设置该接口（使用英文路径）
	* @param handle  机器人控制句柄
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_errorcode_file_path(const JKHD *handle, char *path);
	/**
	* @brief 获取机器人运行过程中最后一个错误码,当调用clear_error时，最后一个错误码会清零
	* @param handle  机器人控制句柄
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_last_error(const JKHD *handle, ErrorCode *code);
	/**
	* @brief 设置是否开启调试模式，选择TRUE时，开始调试模式，此时会在标准输出流中输出调试信息，选择FALSE时，不输出调试信息
	* @param handle  机器人控制句柄
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_debug_mode(const JKHD *handle, BOOL mode);
	/**
	* @brief 设置轨迹复现配置参数
	* @param handle  机器人控制句柄
	* @param para 轨迹复现配置参数
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_traj_config(const JKHD *handle, const TrajTrackPara *para);
	/**
	* @brief 获取轨迹复现配置参数
	* @param handle  机器人控制句柄
	* @param para 轨迹复现配置参数
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_traj_config(const JKHD *handle, TrajTrackPara *para);
	/**
	* @brief 采集轨迹复现数据控制开关
	* @param handle  机器人控制句柄
	* @param mode 选择TRUE时，开始数据采集，选择FALSE时，结束数据采集
	* @param filename 采集数据的存储文件名，当filename为空指针时，存储文件以当前日期命名
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_traj_sample_mode(const JKHD *handle, const BOOL mode, char *filename);
	/**
	* @brief 采集轨迹复现数据状态查询
	* @param handle  机器人控制句柄
	* @param mode 为TRUE时，数据正在采集，为FALSE时，数据采集结束，在数据采集状态时不允许再次开启数据采集开关
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_traj_sample_status(const JKHD *handle, BOOL *sample_status);
	/**
	* @brief 查询控制器中已经存在的轨迹复现数据的文件名
	* @param handle  机器人控制句柄
	* @param filename 控制器中已经存在的轨迹复现数据的文件名
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_exist_traj_file_name(const JKHD *handle, MultStrStorType *filename);
	/**
	* @brief 重命名轨迹复现数据的文件名
	* @param handle  机器人控制句柄
	* @param src 原文件名
	* @param dest 目标文件名，文件名长度不能超过100个字符，文件名不能为空，目标文件名不支持中文
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t rename_traj_file_name(const JKHD *handle, const char *src, const char *dest);
	/**
	* @brief 删除控制器中轨迹复现数据文件
	* @param handle  机器人控制句柄
	* @param filename 要删除的文件的文件名，文件名为数据文件名字
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t remove_traj_file(const JKHD *handle, const char *filename);
	/**
	* @brief 控制器中轨迹复现数据文件生成控制器执行脚本
	* @param handle  机器人控制句柄
	* @param filename 数据文件的文件名，文件名为数据文件名字，不带后缀
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t generate_traj_exe_file(const JKHD *handle, const char *filename);
	/**
	* @brief SERVO模式下不使用滤波器,该指令在SERVO模式下不可设置，退出SERVO后可设置
	* @param handle  机器人控制句柄
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t servo_move_use_none_filter(const JKHD *handle);
	/**
	* @brief SERVO模式下关节空间一阶低通滤波,该指令在SERVO模式下不可设置，退出SERVO后可设置
	* @param handle  机器人控制句柄
	* @param cutoffFreq 一阶低通滤波器截止频率
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t servo_move_use_joint_LPF(const JKHD *handle, double cutoffFreq);
	/**
	* @brief SERVO模式下关节空间非线性滤波,该指令在SERVO模式下不可设置，退出SERVO后可设置
	* @param handle  机器人控制句柄
	* @param max_vr 笛卡尔空间姿态变化速度的速度上限值（绝对值）°/s
	* @param max_ar 笛卡尔空间姿态变化速度的加速度上限值（绝对值）°/s^2
	* @param max_jr 笛卡尔空间姿态变化速度的加加速度上限值（绝对值）°/s^3
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t servo_move_use_joint_NLF(const JKHD *handle, double max_vr, double max_ar, double max_jr);
	/**
	* @brief SERVO模式下笛卡尔空间非线性滤波,该指令在SERVO模式下不可设置，退出SERVO后可设置
	* @param handle  机器人控制句柄
	* @param max_vp 笛卡尔空间下移动指令速度的上限值（绝对值）。单位：mm/s
	* @param max_ap 笛卡尔空间下移动指令加速度的上限值（绝对值）。单位：mm/s^2
	* @param max_jp 笛卡尔空间下移动指令加加速度的上限值（绝对值）单位：mm/s^3
	* @param max_vr 笛卡尔空间姿态变化速度的速度上限值（绝对值）°/s
	* @param max_ar 笛卡尔空间姿态变化速度的加速度上限值（绝对值）°/s^2
	* @param max_jr 笛卡尔空间姿态变化速度的加加速度上限值（绝对值）°/s^3
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t servo_move_use_carte_NLF(const JKHD *handle, double max_vp, double max_ap, double max_jp, double max_vr, double max_ar, double max_jr);
	/**
	* @brief SERVO模式下关节空间多阶均值滤波器,该指令在SERVO模式下不可设置，退出SERVO后可设置
	* @param handle  机器人控制句柄
	* @param max_buf 均值滤波器缓冲区的大小
	* @param kp 加速度滤波系数
	* @param kv 速度滤波系数
	* @param ka 位置滤波系数
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t servo_move_use_joint_MMF(const JKHD *handle, int max_buf, double kp, double kv, double ka);
	/**
	* @brief SERVO模式下速度前瞻参数设置
	* @param handle  机器人控制句柄
	* @param max_buf 缓冲区的大小
	* @param kp 加速度滤波系数
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t servo_speed_foresight(const JKHD *handle, int max_buf, double kp);
	/**
	* @brief 设置SDK日志路径
	* @param handle  机器人控制句柄
	* @param filepath SDK日志路径
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_SDK_filepath(const JKHD *handle, char *filepath);
	/**
	* @brief 设置传感器品牌
	* @param handle  机器人控制句柄
	* @param sensor_brand 传感器品牌，可选值为1,2,3 分别代表不同品牌力矩传感器
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_torsenosr_brand(const JKHD *handle, int sensor_brand);
	/**
	* @brief 获取传感器品牌
	* @param handle  机器人控制句柄
	* @param sensor_brand 传感器品牌，可选值为1,2,3 分别代表不同品牌力矩传感器
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_torsenosr_brand(const JKHD *handle, int *sensor_brand);
	/**
	* @brief 开启或关闭力矩传感器
	* @param handle  机器人控制句柄
	* @param sensor_mode 0代表关闭传感器，1代表开启力矩传感器
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_torque_sensor_mode(const JKHD *handle, int sensor_mode);
	/**
	* @brief 设置柔顺控制参数
	* @param handle  机器人控制句柄
	* @param axis 代表配置哪一轴，可选值为0~5
	* @param opt 柔顺方向，可选值为 1 2 3 4 5 6分别对应 fx fy fz mx my mz 0代表没有勾选
	* @param ftUser 阻尼力，表示用户用多大的力才能让机器人的沿着某个方向以最大速度进行运动
	* @param ftReboundFK 回弹力，表示机器人回到初始状态的能力
	* @param ftConstant 代表恒力，手动操作时全部设置为0
	* @param ftNnormalTrack 法向跟踪，手动操作时全部设置为0,
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_admit_ctrl_config(const JKHD *handle, const int axis, const int opt, const double ftUser, const double ftConstant, const int ftNnormalTrack, const double ftReboundFK);
	/**
	* @brief 开始辨识工具末端负载
	* @param handle  机器人控制句柄
	* @param joint_pos 使用力矩传感器进行自动负载辨识时的结束位置
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t start_torq_sensor_payload_identify(const JKHD *handle, const JointValue *joint_pos);
	/**
	* @brief 获取末端负载辨识状态
	* @param handle  机器人控制句柄
	* @param identify_status 0代表辨识完成，1代表未完成，2代表辨识失败
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_torq_sensor_identify_staus(const JKHD *handle, int *identify_status);
	/**
	* @brief 获取末端负载辨识结果
	* @param handle  机器人控制句柄
	* @param payload 末端负载
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_torq_sensor_payload_identify_result(const JKHD *handle, PayLoad *payload);
	/**
	* @brief 设置传感器末端负载
	* @param handle  机器人控制句柄
	* @param payload 末端负载
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_torq_sensor_tool_payload(const JKHD *handle, const PayLoad *payload);
	/**
	* @brief 获取传感器末端负载
	* @param handle  机器人控制句柄
	* @param payload 末端负载
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_torq_sensor_tool_payload(const JKHD *handle, PayLoad *payload);
	/**
	* @brief 力控拖拽使能
	* @param handle  机器人控制句柄
	* @param enable_flag 0为关闭力控拖拽使能，1为开启
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t enable_admittance_ctrl(const JKHD *handle, const int enable_flag);
	/**
	* @brief 设置力控类型和传感器初始化状态
	* @param handle  机器人控制句柄
	* @param sensor_compensation 是否开启传感器补偿,1代表开启即初始化,0代表不初始化
	* @param compliance_type 0 代表不使用任何一种柔顺控制方法 1 代表恒力柔顺控制,2 代表速度柔顺控制
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_compliant_type(const JKHD *handle, int sensor_compensation, int compliance_type);
	/**
	* @brief 获取力控类型和传感器初始化状态
	* @param handle  机器人控制句柄
	* @param sensor_compensation 是否开启传感器补偿,1代表开启即初始化,0代表不初始化
	* @param compliance_type 0 代表不使用任何一种柔顺控制方法 1 代表恒力柔顺控制,2 代表速度柔顺控制
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_compliant_type(const JKHD *handle, int *sensor_compensation, int *compliance_type);
	/**
	* @brief 获取力控柔顺控制参数
	* @param handle  机器人控制句柄
	* @param admit_ctrl_cfg 机器人力控柔顺控制参数存储地址
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_admit_ctrl_config(const JKHD *handle, RobotAdmitCtrl *admit_ctrl_cfg);
	/**
	* @brief 设置力控传感器通信参数
	* @param handle  机器人控制句柄
	* @param type 0为使用tcp/ip协议，1为使用RS485协议
	* @param ip_addr为力控传感器地址
	* @param port为使用tcp/ip协议时力控传感器端口号
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t set_torque_sensor_comm(const JKHD *handle, const int type, const char *ip_addr, const int port);
	/**
	* @brief 获取力控传感器通信参数
	* @param handle  机器人控制句柄
	* @param ip_addr为力控传感器地址
	* @return ERR_SUCC 成功 其他失败
	*/
	DLLEXPORT_API errno_t get_torque_sensor_comm(const JKHD *handle, int *type, char *ip_addr, int *port);